set(part06_files sstack.h dstack.h)
set(header_06_1 ${CMAKE_CURRENT_SOURCE_DIR}/sstack.h)
set(header_06_2 ${CMAKE_CURRENT_SOURCE_DIR}/dstack.h)

#add_library(lib_06 STATIC ${part06_files})
#target_link_libraries(lib_06 pthread)

#target_include_directories(lib_06 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
#target_include_directories(lib_06 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
#install(FILES ${header_05_1} DESTINATION "${include_dest}")
#install(FILES ${header_05_2} DESTINATION "${include_dest}")